# BoilerBot

./: README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
boilerbot/: __main__.py
